--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,40 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+         <li>The head element contains information about the webpage.</li>
+         <li>The body element represents the visible content shown to the user.</li>
+         <li>The footer element represents data related to the author, data that contains copyright information or some links related to that data.</li>
+         <li>The section elements are semantic elements that define a section in a document that contains thematic content.</li>
+         <li>Elements are used to divide the content on the page and to describe the content to the browser and other developers.</li>
+         <li>HTML elements work together to build the structure of a webpage and provide a framework that makes it easy for a user to navigate the webpage.<li>
+         <li>Common element types that are used to divide and describe a page are meta-related elements and content division elements and semantic elements.</li>
+       </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+         <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+         <li>git status: checks what branch we are currently on</li>
+         <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        <ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript<h2>
+        <ul>
+         <li>Enter your JavaScript notes here</li>
+        <ul>
+      </section>
     </main>
 
     <footer>
